--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
         // App version
-        versionName = '2.6.0'
-        versionCode = 13
+        versionName = '2.6.1'
+        versionCode = 14
 
         applicationId = "io.novafoundation.nova"
+        releaseApplicationSuffix = "market"
 
         // SDK and tools
         compileSdkVersion = 30
