--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,6 +23,7 @@ android {
         buildConfigField "String", "YOUTUBE_URL", "\"https://www.youtube.com/channel/UChoQr3YPETJKKVvhQ0AfV6A\""
 
         buildConfigField "String", "TWITTER_ACCOUNT_TEMPLATE", "\"https://twitter.com/%s\""
+        buildConfigField "String", "RECOMMENDED_VALIDATORS_LEARN_MORE", "\"https://github.com/nova-wallet/nova-utils/wiki/Recommended-validators-in-Nova-Wallet\""
 
         buildConfigField "String", "PAYOUTS_LEARN_MORE", "\"https://wiki.polkadot.network/docs/en/learn-simple-payouts\""
 
