--- a/feature-assets/build.gradle
+++ b/feature-assets/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     implementation insetterDep
 
     implementation shimmerDep
+    implementation flexBoxDep
 
     androidTestImplementation androidTestRunnerDep
     androidTestImplementation androidTestRulesDep
