Sign and send ethereum transactions for Metamask

--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -84,6 +84,9 @@ dependencies {
 
     implementation retrofitDep
 
+    implementation web3jDep
+    implementation coroutinesFutureDep
+
     testImplementation jUnitDep
     testImplementation mockitoDep
 }
