--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ buildscript {
 
         bouncyCastleVersion = '1.65'
 
+        web3jVersion = '4.8.0'
+
         fearlessLibVersion = '1.4.0'
 
         gifVersion = '1.2.19'
@@ -96,6 +98,9 @@ buildscript {
         coroutinesDep = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
         coroutinesAndroidDep = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
         coroutinesTestDep = "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+        coroutinesFutureDep = "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:$coroutinesVersion"
+
+        web3jDep = "org.web3j:core:$web3jVersion"
 
         // viewModelScope
         viewModelKtxDep = "androidx.lifecycle:lifecycle-viewmodel-ktx:$architectureComponentVersion"
