--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ buildscript {
         junitVersion = '4.12'
         mockitoVersion = '3.12.4'
         robolectricVersion = '4.1'
+        allureVersion = '2.4.0'
 
         bouncyCastleVersion = '1.65'
 
@@ -154,6 +155,11 @@ buildscript {
         androidTestRulesDep = 'androidx.test:rules:1.4.0'
         androidJunitDep = 'androidx.test.ext:junit:1.1.3'
 
+        allureKotlinModel = "io.qameta.allure:allure-kotlin-model:$allureVersion"
+        allureKotlinCommons = "io.qameta.allure:allure-kotlin-commons:$allureVersion"
+        allureKotlinJunit4 = "io.qameta.allure:allure-kotlin-junit4:$allureVersion"
+        allureKotlinAndroid = "io.qameta.allure:allure-kotlin-android:$allureVersion"
+
         roomTestsDep = "androidx.room:room-testing:$architectureComponentVersion"
     }
 
@@ -164,9 +170,6 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "io.qameta.allure:allure-kotlin-model:2.4.0"
-        classpath "io.qameta.allure:allure-kotlin-commons:2.4.0"
-        classpath "io.qameta.allure:allure-kotlin-junit4:2.4.0"
         classpath 'com.android.tools.build:gradle:3.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.google.gms:google-services:4.3.3'
