Improve balance integration test (#266)
* Delete hardcode

Fixing

Fixing

* Adding allure listener for instrumental tests

* Adding allure report for instrumental tests

* Fix test result exporting

* Fix some problems with runner

* Fix some problems with runner

* Add install step

* Fix app instalation

* return config back

* Create separate Build type

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,11 @@ android {
               groups = localFirebaseGroup
             }
         }
+        instrumentialTest {
+            initWith buildTypes.debug
+            matchingFallbacks = ['debug']
+            defaultConfig.testInstrumentationRunner "io.qameta.allure.android.runners.AllureAndroidJUnitRunner"
+        }
     }
 
     sourceSets {
@@ -175,6 +180,11 @@ dependencies {
     androidTestImplementation androidTestRunnerDep
     androidTestImplementation androidTestRulesDep
     androidTestImplementation androidJunitDep
+
+    androidTestImplementation allureKotlinModel
+    androidTestImplementation allureKotlinCommons
+    androidTestImplementation allureKotlinJunit4
+    androidTestImplementation allureKotlinAndroid
 }
 
 task printVersion {
