New chain icons

--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -11,7 +11,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/chains/v4/chains_dev.json\""
+        // TODO replace with master link after v5 PR is merged. Should be done before merging this PR branch to dev
+        buildConfigField "String", "CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/f83597b701f695afe5cd13bf8cb91fef9dffd193/chains/v5/chains_dev.json\""
 
         buildConfigField "String", "TEST_CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/tests/chains_for_testBalance.json\""
     }
