Scan parity signer account screen

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -103,4 +103,6 @@ dependencies {
     testImplementation jUnitDep
     testImplementation mockitoDep
     testImplementation project(':test-shared')
+
+    implementation permissionsDep
 }
