--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,8 @@ android {
         buildConfigField "String", "PAYOUTS_LEARN_MORE", "\"https://wiki.polkadot.network/docs/en/learn-simple-payouts\""
 
         buildConfigField "String", "SET_CONTROLLER_LEARN_MORE", "\"https://wiki.polkadot.network/docs/en/maintain-guides-how-to-nominate-polkadot#setting-up-stash-and-controller-keys\""
+
+        buildConfigField "String", "PARITY_SIGNER_TROUBLESHOOTING", "\"https://github.com/nova-wallet/nova-utils/wiki/Parity-Signer-troubleshooting\""
     }
 
     buildTypes {
