--- a/.github/workflows/manual_github_release.yml
+++ b/.github/workflows/manual_github_release.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: stepanLav/helpful-utils
+          repository: ${{ env.release_repo }}
           persist-credentials: false
           fetch-depth: 0
 
