--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ include ':feature-dapp-impl'
 include ':feature-assets'
 include ':feature-nft-api'
 include ':feature-nft-impl'
+include ':feature-ledger-api'
+include ':feature-ledger-impl'
