--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,9 @@ dependencies {
     implementation project(':feature-onboarding-api')
     implementation project(':feature-onboarding-impl')
 
+    implementation project(':feature-ledger-api')
+    implementation project(':feature-ledger-impl')
+
     implementation project(':feature-account-api')
     implementation project(':feature-account-impl')
 
