--- a/feature-ledger-api/src/main/AndroidManifest.xml
+++ b/feature-ledger-api/src/main/AndroidManifest.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.novafoundation.nova.feature_ledger_api">
-
-</manifest>
+<manifest package="io.novafoundation.nova.feature_ledger_api" />
