--- a/feature-ledger-impl/build.gradle
+++ b/feature-ledger-impl/build.gradle
@@ -20,8 +20,6 @@ android {
     }
 
     kotlinOptions {
-        freeCompilerArgs = ["-Xallow-result-return-type"]
-
         jvmTarget = '1.8'
     }
 
@@ -35,6 +33,9 @@ dependencies {
     implementation project(":feature-ledger-api")
     implementation project(":common")
     implementation project(":runtime")
+
+    implementation bleDep
+    implementation bleKotlinDep
 
     implementation kotlinDep
 
