Ledger base communication logic

--- a/feature-ledger-impl/build.gradle
+++ b/feature-ledger-impl/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation project(":common")
     implementation project(":runtime")
 
+    implementation fearlessLibDep
+
     implementation bleDep
     implementation bleKotlinDep
 
