--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+
     <application
         tools:replace="android:allowBackup"
         android:name="io.novafoundation.nova.app.App"
