Fill ledger wallet screen

--- a/feature-ledger-impl/build.gradle
+++ b/feature-ledger-impl/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation project(":common")
     implementation project(":runtime")
 
+    implementation materialDep
+
     implementation fearlessLibDep
 
     implementation bleDep
