Select ledger screen skeleton

--- a/feature-ledger-impl/build.gradle
+++ b/feature-ledger-impl/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     implementation coroutinesDep
     implementation coroutinesAndroidDep
+    implementation lifeCycleKtxDep
 
     implementation daggerDep
     kapt daggerKapt
