--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -8,11 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    container:
-      image: ghcr.io/nova-wallet/build_tools:pr-3
-      credentials:
-        username: stepanLav
-        password: ${{ secrets.GITHUB_TOKEN }}
+
     env:
       ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
       ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
@@ -28,58 +24,61 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Bump version
-        uses: chkfung/android-version-actions@v1.1
-        with:
-          gradlePath: app/build.gradle
-          versionCode: ${{github.run_number}}
+      - name: 🔧 Install dependencies
+        uses: ./.github/workflows/install/
 
-      - name: Run tests
-        run: ./gradlew runTest
+      # - name: Bump version
+      #   uses: chkfung/android-version-actions@v1.1
+      #   with:
+      #     gradlePath: app/build.gradle
+      #     versionCode: ${{github.run_number}}
+
+      # - name: Run tests
+      #   run: ./gradlew runTest
 
       - name: Build with Gradle
         run: ./gradlew assembleDevelop
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: apk
-          path: app/build/outputs/apk/develop/
+  #     - uses: actions/upload-artifact@v2
+  #       with:
+  #         name: apk
+  #         path: app/build/outputs/apk/develop/
 
-  upload:
-    runs-on: ubuntu-latest
-    needs: build
+  # upload:
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download built artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: apk
-          path: app
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download built artifact
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: apk
+  #         path: app
 
-      - name: Upload artifact to Firebase App Distribution
-        id: upload
-        continue-on-error: true
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
-          token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
-          releaseNotes: ${{ github.event.head_commit.message }}
-          groups: dev-team
-          file: app/app-develop.apk
+  #     - name: Upload artifact to Firebase App Distribution
+  #       id: upload
+  #       continue-on-error: true
+  #       uses: wzieba/Firebase-Distribution-Github-Action@v1
+  #       with:
+  #         appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
+  #         token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
+  #         releaseNotes: ${{ github.event.head_commit.message }}
+  #         groups: dev-team
+  #         file: app/app-develop.apk
 
-      - name: Sleep for 60 seconds
-        uses: whatnick/wait-action@master
-        if: steps.upload.outcome=='failure'
-        with:
-          time: '60s'
+  #     - name: Sleep for 60 seconds
+  #       uses: whatnick/wait-action@master
+  #       if: steps.upload.outcome=='failure'
+  #       with:
+  #         time: '60s'
 
-      - name: Retry upload artifacts
-        if: steps.upload.outcome=='failure'
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
-          token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
-          releaseNotes: ${{ github.event.head_commit.message }}
-          groups: dev-team
-          file: app/app-develop.apk
+  #     - name: Retry upload artifacts
+  #       if: steps.upload.outcome=='failure'
+  #       uses: wzieba/Firebase-Distribution-Github-Action@v1
+  #       with:
+  #         appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
+  #         token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
+  #         releaseNotes: ${{ github.event.head_commit.message }}
+  #         groups: dev-team
+  #         file: app/app-develop.apk
