--- a/feature-account-impl/build.gradle
+++ b/feature-account-impl/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(':common')
     implementation project(':runtime')
     implementation project(':feature-account-api')
+    implementation project(':feature-currency-api')
 
     implementation kotlinDep
 
