--- a/feature-ledger-impl/build.gradle
+++ b/feature-ledger-impl/build.gradle
@@ -33,6 +33,7 @@ android {
 dependencies {
     implementation project(":feature-ledger-api")
     implementation project(':feature-account-api')
+    implementation project(':feature-wallet-api')
     implementation project(":common")
     implementation project(":runtime")
 
