--- a/feature-assets/build.gradle
+++ b/feature-assets/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation project(':feature-wallet-api')
     implementation project(':feature-account-api')
     implementation project(':feature-nft-api')
+    implementation project(':feature-currency-api')
     implementation project(':runtime')
 
     implementation kotlinDep
