--- a/feature-currency-api/build.gradle
+++ b/feature-currency-api/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     implementation coroutinesDep
+    implementation project(':core-db')
     implementation project(':runtime')
     implementation project(":common")
 
