--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation project(':feature-account-api')
     implementation project(':feature-wallet-api')
     implementation project(':feature-dapp-api')
+    implementation project(':feature-currency-api')
     implementation project(':runtime')
 
     implementation kotlinDep
