Propagate new currency display in all fabrics for each of the modules

--- a/feature-staking-impl/build.gradle
+++ b/feature-staking-impl/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(':feature-staking-api')
     implementation project(':feature-account-api')
     implementation project(':feature-wallet-api')
+    implementation project(':feature-currency-api')
     implementation project(':runtime')
 
     implementation kotlinDep
