--- a/feature-crowdloan-impl/build.gradle
+++ b/feature-crowdloan-impl/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation project(':feature-crowdloan-api')
     implementation project(':feature-account-api')
     implementation project(':feature-wallet-api')
+    implementation project(':feature-currency-api')
     implementation project(':runtime')
 
     implementation kotlinDep
