--- a/feature-account-api/build.gradle
+++ b/feature-account-api/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -28,6 +29,8 @@ dependencies {
     implementation project(':runtime')
     implementation project(":common")
 
+    implementation project(":feature-currency-api")
+
     implementation liveDataKtxDep
     implementation lifeCycleKtxDep
     implementation androidDep
@@ -38,6 +41,9 @@ dependencies {
 //    implementation fragmentKtxDep
 
     implementation constraintDep
+
+    implementation daggerDep
+    kapt daggerKapt
 
     api fearlessLibDep
 
