--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -27,4 +27,10 @@ jobs:
         uses: ./.github/workflows/install/
 
       - name: 🧪 Run tests
-        run: ./gradlew runTest
+        id: test
+        run: ./gradlew runTest --stacktrace
+
+      - uses: yutailang0119/action-ktlint@v3
+        with:
+          report-path: build/*.xml
+        continue-on-error: false
