--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,4 +33,4 @@ jobs:
       - uses: yutailang0119/action-ktlint@v3
         with:
           report-path: build/*.xml
-        continue-on-error: false
+        continue-on-error: true
