Sign ledger screen skeleton

--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 
     testImplementation project(':test-shared')
 
+    implementation lifeCycleKtxDep
+
     androidTestImplementation androidTestRunnerDep
     androidTestImplementation androidTestRulesDep
     androidTestImplementation androidJunitDep
