--- a/feature-account-impl/build.gradle
+++ b/feature-account-impl/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(':runtime')
     implementation project(':feature-account-api')
     implementation project(':feature-currency-api')
+    implementation project(':feature-ledger-api')
 
     implementation kotlinDep
 
