--- a/.github/workflows/manual_firebase_distribution.yml
+++ b/.github/workflows/manual_firebase_distribution.yml
@@ -8,16 +8,7 @@ on:
         required: true
         default: dev-team
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    container:
-      image: ghcr.io/nova-wallet/build_tools:pr-3
-      credentials:
-        username: stepanLav
-        password: ${{ secrets.GITHUB_TOKEN }}
-    env:
+env:
       ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
       ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
       MOONBEAM_PROD_AUTH_TOKEN: ${{ secrets.MOONBEAM_PROD_AUTH_TOKEN }}
@@ -29,8 +20,16 @@ jobs:
       CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
       CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+
     steps:
       - uses: actions/checkout@v2
+
+      - name: 🔧 Install dependencies
+        uses: ./.github/workflows/install/
 
       - name: 🧪 Run tests
         run: ./gradlew runTest
