GitHub Actions refactoring

--- a/.github/workflows/install/action.yml
+++ b/.github/workflows/install/action.yml
@@ -1,3 +1,5 @@
+name: Install dependencies for Android build
+description: Contains all dependencies for Android build
 runs:
   using: "composite"
   steps:
