--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -4,22 +4,22 @@ on:
   push:
     branches: [develop]
 
+env:
+  ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
+  ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
+  MOONBEAM_PROD_AUTH_TOKEN: ${{ secrets.MOONBEAM_PROD_AUTH_TOKEN }}
+  MOONBEAM_TEST_AUTH_TOKEN: ${{ secrets.MOONBEAM_TEST_AUTH_TOKEN }}
+  MOONPAY_PRODUCTION_SECRET: ${{ secrets.MOONPAY_PRODUCTION_SECRET }}
+  MOONPAY_TEST_SECRET: ${{ secrets.MOONPAY_TEST_SECRET }}
+
+  CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
+  CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
+  CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
-    env:
-      ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
-      ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
-      MOONBEAM_PROD_AUTH_TOKEN: ${{ secrets.MOONBEAM_PROD_AUTH_TOKEN }}
-      MOONBEAM_TEST_AUTH_TOKEN: ${{ secrets.MOONBEAM_TEST_AUTH_TOKEN }}
-      MOONPAY_PRODUCTION_SECRET: ${{ secrets.MOONPAY_PRODUCTION_SECRET }}
-      MOONPAY_TEST_SECRET: ${{ secrets.MOONPAY_TEST_SECRET }}
-
-      CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
-      CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
-      CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
 
     steps:
       - uses: actions/checkout@v2
@@ -56,29 +56,11 @@ jobs:
           name: apk
           path: app
 
-      - name: Upload artifact to Firebase App Distribution
-        id: upload
-        continue-on-error: true
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
+      - name: 🗳 Upload to Firebase
+        uses: ./.github/workflows/upload-to-firebase
         with:
           appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
-          token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
+          firebase-token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
           releaseNotes: ${{ github.event.head_commit.message }}
-          groups: dev-team
-          file: app/app-develop.apk
-
-      - name: Sleep for 60 seconds
-        uses: whatnick/wait-action@master
-        if: steps.upload.outcome=='failure'
-        with:
-          time: '60s'
-
-      - name: Retry upload artifacts
-        if: steps.upload.outcome=='failure'
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{ secrets.ANDROID_DEVELOP_FIREBASE_APP_ID }}
-          token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
-          releaseNotes: ${{ github.event.head_commit.message }}
-          groups: dev-team
-          file: app/app-develop.apk
+          test-groups: dev-team
+          upload-file: app/app-develop.apk
