--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,5 @@ include ':feature-ledger-api'
 include ':feature-ledger-impl'
 include ':feature-currency-api'
 include ':feature-currency-impl'
+include ':feature-governance-api'
+include ':feature-governance-impl'
