--- a/feature-governance-api/build.gradle
+++ b/feature-governance-api/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation coroutinesDep
     implementation project(':runtime')
     implementation project(":common")
+    api project(":feature-wallet-api")
 
     implementation daggerDep
 
