Fix getting secrets

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,21 +21,21 @@ android {
     signingConfigs {
         dev {
             storeFile file('develop_key.jks')
-            storePassword System.env.CI_KEYSTORE_PASS ?: ''
-            keyAlias System.env.CI_KEYSTORE_KEY_ALIAS ?: ''
-            keyPassword System.env.CI_KEYSTORE_KEY_PASS ?: ''
+            storePassword readSecretOrNull('CI_KEYSTORE_PASS')
+            keyAlias readSecretOrNull('CI_KEYSTORE_KEY_ALIAS')
+            keyPassword readSecretOrNull('CI_KEYSTORE_KEY_PASS')
         }
         market {
             storeFile file('market_key.jks')
-            storePassword System.env.CI_MARKET_KEYSTORE_PASS ?: ''
-            keyAlias System.env.CI_MARKET_KEYSTORE_KEY_ALIAS ?: ''
-            keyPassword System.env.CI_MARKET_KEYSTORE_KEY_PASS ?: ''
+            storePassword readSecretOrNull('CI_MARKET_KEYSTORE_PASS')
+            keyAlias readSecretOrNull('CI_MARKET_KEYSTORE_KEY_ALIAS')
+            keyPassword readSecretOrNull('CI_MARKET_KEYSTORE_KEY_PASS')
         }
         github {
             storeFile file('github_key.jks')
-            storePassword System.env.CI_GITHUB_KEYSTORE_PASS ?: ''
-            keyAlias System.env.CI_GITHUB_KEYSTORE_KEY_ALIAS ?: ''
-            keyPassword System.env.CI_GITHUB_KEYSTORE_KEY_PASS ?: ''
+            storePassword readSecretOrNull('CI_GITHUB_KEYSTORE_PASS')
+            keyAlias readSecretOrNull('CI_GITHUB_KEYSTORE_KEY_ALIAS')
+            keyPassword readSecretOrNull('CI_GITHUB_KEYSTORE_KEY_PASS')
         }
     }
     buildTypes {
@@ -46,9 +46,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            versionNameSuffix "-${releaseApplicationSuffix}"
-            applicationIdSuffix ".${releaseApplicationSuffix}"
         }
         releaseTest {
             initWith buildTypes.release
@@ -62,6 +59,9 @@ android {
             initWith buildTypes.release
             matchingFallbacks = ['release']
             signingConfig signingConfigs.market
+
+            versionNameSuffix "-${releaseApplicationSuffix}"
+            applicationIdSuffix ".${releaseApplicationSuffix}"
         }
         releaseGithub {
             initWith buildTypes.release
