--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ android {
         releaseGithub {
             res.srcDirs = ['src/release/res']
         }
+        releaseMarket {
+            res.srcDirs = ['src/release/res']
+        }
     }
 
     bundle {
@@ -116,14 +119,22 @@ android {
 }
 
 task bindReleaseGithubGoogleServicesToRelease(type: Copy) {
-    description = 'Switches to RELEASE google-services.json'
+    description = 'Switches to RELEASE google-services.json for GitHub'
     from "src/release"
     include "google-services.json"
     into "src/releaseGithub"
 }
 
+task bindReleaseMarketGoogleServicesToRelease(type: Copy) {
+    description = 'Switches to RELEASE google-services.json for Market'
+    from "src/release"
+    include "google-services.json"
+    into "src/releaseMarket"
+}
+
 afterEvaluate {
     processReleaseGithubGoogleServices.dependsOn bindReleaseGithubGoogleServicesToRelease
+    processReleaseMarketGoogleServices.dependsOn bindReleaseMarketGoogleServicesToRelease
 }
 
 play {
