--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -4,18 +4,6 @@ on:
   push:
     branches: [develop]
 
-env:
-  ACALA_PROD_AUTH_TOKEN: ${{ secrets.ACALA_PROD_AUTH_TOKEN }}
-  ACALA_TEST_AUTH_TOKEN: ${{ secrets.ACALA_TEST_AUTH_TOKEN }}
-  MOONBEAM_PROD_AUTH_TOKEN: ${{ secrets.MOONBEAM_PROD_AUTH_TOKEN }}
-  MOONBEAM_TEST_AUTH_TOKEN: ${{ secrets.MOONBEAM_TEST_AUTH_TOKEN }}
-  MOONPAY_PRODUCTION_SECRET: ${{ secrets.MOONPAY_PRODUCTION_SECRET }}
-  MOONPAY_TEST_SECRET: ${{ secrets.MOONPAY_TEST_SECRET }}
-
-  CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
-  CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
-  CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,6 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set Environment Variables
+        uses: tw3lveparsecs/github-actions-setvars@v0.1
+        with:
+          envFilePath: .github/workflows/variables/android.env
 
       - name: 🔧 Install dependencies
         uses: ./.github/workflows/install/
