--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,20 +4,8 @@ on:
   pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set Environment Variables
-        uses: ./.github/workflows/setvars/
-        with:
-          varFilePath: ${{ secrets }}
-
-      - name: 🔧 Install dependencies
-        uses: ./.github/workflows/install/
-
-      - name: 🧪 Run tests
-        run: ./gradlew runTest
+  call-workflow-passing-data:
+    uses: nova-wallet/nova-wallet-android/.github/workflows/build-app/android_build.yml@fix/github_actions
+    with:
+      username: mona
+    secrets: inherit
