--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,5 +7,5 @@ jobs:
   call-workflow-passing-data:
     uses: nova-wallet/nova-wallet-android/.github/workflows/android_build.yml@fix/github_actions
     with:
-      username: mona
+      gradlew-command: runTests
     secrets: inherit
