--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
       run-tests:
-        required:
+        required: false
         type: boolean
         default: false
     secrets:
